<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Online Shop</string>

    //Sign In fragment
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="already_hav">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_wit_google">Sign in with Google</string>
    <string name="sign_in_wit_apple">Sign in with Apple</string>
    <string name="username_exists">Username already exists</string>
    <string name="something_wrong">Something wrong. Try again please</string>
    <string name="name_cannot_empty">Username cannot be empty</string>
    <string name="valid_email">Valid email address</string>
    <string name="invalid_email">Invalid email address</string>

    //Log In Fragment
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_not_exists">Username does not exists</string>

    //Profile Fragment
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_met">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_histo">Trade history</string>
    <string name="restore_pur">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>

    //Home Fragment
    <string name="title1">Trade by</string>
    <string name="title2">bata</string>
    <string name="location">Location</string>
    <string name="what_are_yo">What are you looking for ?</string>
    <string name="latest">Latest</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="view_all">View all</string>

    //Details Fragment
    <string name="color">Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="reviews">reviews</string>

    //Bottom Navigation
    <string name="home">Home</string>
    <string name="favorites">Favorite</string>
    <string name="basket">Basket</string>
    <string name="chat">Chat</string>

</resources>