<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAppearance="@style/Title_Text"
        android:layout_marginTop="121dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginHorizontal="42dp"
        android:padding="7dp"
        android:textAppearance="@style/Primary_Text"
        android:hint="@string/first_name"
        android:gravity="center"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@color/primary_text_color"
        android:inputType="textCapSentences"
        android:background="@drawable/bg_edit_text_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Primary_Text"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:textCursorDrawable="@color/primary_text_color"
        android:inputType="textPassword"
        android:background="@drawable/bg_edit_text_signin"
        android:hint="@string/password"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"/>

    <ImageView
        android:id="@+id/iv_password_visibility_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_look_password"
        app:layout_constraintTop_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        android:layout_marginEnd="15dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Primary"
        android:text="@string/login"
        android:layout_marginTop="99dp"
        android:layout_marginHorizontal="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"/>


</androidx.constraintlayout.widget.ConstraintLayout>