<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.profile.presentation.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textAppearance="@style/Subtitle_Text" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shapeAppearance="@style/roundedImageView">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_avatar"
            android:layout_width="61dp"
            android:layout_height="61dp"
            app:shapeAppearance="@style/roundedImageView" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat_medium"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/change_photo"
        android:textColor="@color/secondary_text_color"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/container_iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/container_iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/container_iv_avatar" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Satria Adhi Pradana"
        android:textAppearance="@style/Subtitle_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="36dp"
        android:text="@string/upload_item"
        app:icon="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/trade_store"
                android:textAppearance="@style/Primary_Text"
                app:drawableEndCompat="@drawable/ic_arrow_rigth"
                app:drawableStartCompat="@drawable/ic_credit_card" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/payment_met"
                android:textAppearance="@style/Primary_Text"
                app:drawableEndCompat="@drawable/ic_arrow_rigth"
                app:drawableStartCompat="@drawable/ic_credit_card" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/balance"
                android:textAppearance="@style/Primary_Text"
                app:drawableStartCompat="@drawable/ic_credit_card" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:gravity="end"
                android:text="$ 1593"
                android:textAppearance="@style/Primary_Text" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/trade_histo"
                android:textAppearance="@style/Primary_Text"
                app:drawableEndCompat="@drawable/ic_arrow_rigth"
                app:drawableStartCompat="@drawable/ic_credit_card" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/restore_pur"
                android:textAppearance="@style/Primary_Text"
                app:drawableEndCompat="@drawable/ic_arrow_rigth"
                app:drawableStartCompat="@drawable/ic_update_in_circle" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/help"
                android:textAppearance="@style/Primary_Text"
                app:drawableStartCompat="@drawable/ic_help_in_circle" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="32dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/log_out"
                android:textAppearance="@style/Primary_Text"
                app:drawableStartCompat="@drawable/ic_logout_in_circle" />
        </FrameLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>