<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".modules.home.presentation.HomeFragment">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_burger_menu"
                app:layout_constraintBottom_toBottomOf="@+id/ll_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ll_title" />

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="23dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title1"
                    android:textAppearance="@style/Title_Text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/title2"
                    android:textAppearance="@style/Title_Text"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/container_iv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="47dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/ll_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ll_title"
                app:shapeAppearance="@style/roundedImageView">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:scaleType="fitXY"
                    app:shapeAppearance="@style/roundedImageView" />
            </com.google.android.material.card.MaterialCardView>

            <Spinner
                style="@style/SpinnerTheme"
                android:id="@+id/spinner_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_spinner"
                app:layout_constraintEnd_toEndOf="@+id/container_iv_avatar"
                app:layout_constraintStart_toStartOf="@+id/container_iv_avatar"
                app:layout_constraintTop_toBottomOf="@+id/container_iv_avatar" />

            <EditText
                android:id="@+id/et_search"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edit_text_search"
                android:drawableEnd="@drawable/ic_search"
                android:drawablePadding="47dp"
                android:hint="@string/what_are_yo"
                android:paddingVertical="6dp"
                android:paddingStart="75dp"
                android:paddingEnd="8.5dp"
                android:textAppearance="@style/Hint_Text2"
                android:textColor="#5B5B5B"
                android:textColorHint="#5B5B5B"
                android:textCursorDrawable="@color/primary_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_location" />




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:itemCount="4"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/et_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
